--- a/paper.bib
+++ b/paper.bib
@@ -29,3 +29,21 @@
   howpublished = {\url{https://peps.python.org/pep-0557/}},
   note         = {Accessed: 2026-01-13}
 }
+
+@software{openhcs,
+  author       = {Simas, Tristan},
+  title        = {OpenHCS: Open High-Content Screening Platform},
+  year         = {2026},
+  publisher    = {GitHub},
+  url          = {https://github.com/trissim/openhcs},
+  note         = {Open-source microscopy image analysis platform}
+}
+
+@software{pyqtformgen,
+  author       = {Simas, Tristan},
+  title        = {pyqt-formgen: A Reactive Application Framework for PyQt6},
+  year         = {2026},
+  publisher    = {GitHub},
+  url          = {https://github.com/trissim/pyqt-formgen},
+  note         = {Companion library providing GUI infrastructure}
+}
