--- a/paper.bib
+++ b/paper.bib
@@ -39,11 +39,19 @@
   note         = {Open-source microscopy image analysis platform}
 }
 
-@software{pyqtformgen,
+@software{pyqtreactor,
   author       = {Simas, Tristan},
-  title        = {pyqt-formgen: A Reactive Application Framework for PyQt6},
+  title        = {pyqt-reactor: A Reactive Application Framework for PyQt6},
   year         = {2026},
   publisher    = {GitHub},
-  url          = {https://github.com/trissim/pyqt-formgen},
+  url          = {https://github.com/OpenHCSDev/PyQT-reactor},
   note         = {Companion library providing GUI infrastructure}
+}
+
+@misc{ast,
+  title        = {ast --- Abstract Syntax Trees},
+  author       = {{Python Software Foundation}},
+  year         = {2024},
+  howpublished = {\url{https://docs.python.org/3/library/ast.html}},
+  note         = {Accessed: 2026-01-13}
 }
