docs: expand paper with additional details and examples

--- a/paper.bib
+++ b/paper.bib
@@ -55,3 +55,35 @@
   howpublished = {\url{https://docs.python.org/3/library/ast.html}},
   note         = {Accessed: 2026-01-13}
 }
+
+@misc{repr,
+  title        = {repr() --- String representation of objects},
+  author       = {{Python Software Foundation}},
+  year         = {2024},
+  howpublished = {\url{https://docs.python.org/3/library/functions.html#repr}},
+  note         = {Accessed: 2026-01-15}
+}
+
+@article{mcilroy1976mass,
+  author       = {McIlroy, M. D.},
+  title        = {Mass-Produced Software Components},
+  journal      = {Software Engineering},
+  year         = {1976},
+  note         = {Foundational work on software reproducibility and component composition}
+}
+
+@software{json,
+  title        = {JSON: JavaScript Object Notation},
+  author       = {Crockford, Douglas},
+  year         = {2024},
+  howpublished = {\url{https://www.json.org/}},
+  note         = {Accessed: 2026-01-15}
+}
+
+@misc{pep484,
+  title        = {PEP 484 -- Type Hints},
+  author       = {van Rossum, Guido and Lehtosalo, Jukka and Langa, Łukasz},
+  year         = {2014},
+  howpublished = {\url{https://peps.python.org/pep-0484/}},
+  note         = {Accessed: 2026-01-15}
+}
